# Genetic-Algorithm

./: Cargo.toml
ga_app/: Cargo.toml
ga_app/src/: application.rs  lib.rs  schedule.rs  system.rs
ga_core/: Cargo.toml
ga_core/src/: gene.rs  individual.rs  individual_manager.rs  lib.rs  simulation.rs
ga_ecs/: Cargo.toml
ga_ecs/src/: entity_builder.rs  entity_commands.rs  entity_manager.rs  into_entity.rs  lib.rs
ga_game/: Cargo.toml
ga_game/src/: components.rs  debug.rs  game_manager.rs  lib.rs  spawner.rs  survivor_individual.rs  survivor_manager.rs  update.rs  utils.rs  world_manager.rs
ga_game/src/entity/: enemy.rs  food.rs  mod.rs
ga_survivor_simulation/: Cargo.toml
ga_survivor_simulation/src/: components.rs  genes.rs  lib.rs  manager.rs  survivor.rs
ga_vec2/: Cargo.toml
ga_vec2/src/: fvec2.rs  ivec2.rs  lib.rs  normalized.rs  utils.rs  vec2.rs
src/: config.rs  main.rs
